--- a/RotiniSoundwaveUX/package.json
+++ b/RotiniSoundwaveUX/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.3",
+    "socket.io": "^2.3.0",
+    "socket.io-stream": "^0.9.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -28,9 +31,9 @@
     "@angular/cli": "~8.3.4",
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
