Added modal component and service

--- a/RotiniSoundwaveUX/package.json
+++ b/RotiniSoundwaveUX/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "socket.io": "^2.3.0",
